--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -43,6 +43,7 @@ body {
     border-radius: 50%;
     height: 100px;
     width: 100px;
+    object-fit: fill;
     filter : drop-shadow(0 0 0.75rem #dbc2a4);
 
 }
@@ -175,7 +176,6 @@ p#numero {
 #about {
     height: 12px;
     width: 400px;
-    /*padding-left: 10px;*/
     padding-right: 10px;
 }
 
