--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,12 +8,9 @@
 
 h3 {
     font-family: 'Lato', sans-serif;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
-h2{
-    font-family: 'Lato', sans-serif;
-    font-size: 1em;
-}
+
 h4{
     font-family: 'Lato', sans-serif;
     font-size: 1em;
@@ -47,6 +44,12 @@ body {
     filter : drop-shadow(0 0 0.75rem #dbc2a4);
 
 }
+
+#profil img:hover{
+    cursor: zoom-in;
+    
+}
+
 header {
     background-color: #782221;
     width: 1160px;
@@ -66,6 +69,8 @@ h2 {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 30px;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5em;
 }
 
 footer {
@@ -101,10 +106,12 @@ footer p {
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    
 }
 
 #information{
     width: 1160px;
+    text-decoration: none;
 }
 address {
     width: 1160px;
@@ -115,12 +122,23 @@ address {
     padding-top: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
+
+}
+a:link {
+    text-decoration: none;
+    color: white;
+
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 
 p#rue{
     text-align: left;
     margin-left: 30px;
+
 
 }
 p#email {
@@ -139,12 +157,47 @@ p#numero {
     align-items: center;
     margin-right: 30px;
 }
+
 #network {
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+}
+#network_1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+
+#network_1:hover {
+    opacity: 80%;
+}
+
+#network_2 {
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: 10px;
+    padding-left: 10px;
+    justify-content: center;
+    align-content: space-around;
+}
+
+#network_2:hover {
+    opacity: 80%;
+}
+
+#network_3 {
     display: flex;
     flex-wrap: wrap;
 
     justify-content: center;
     align-content: space-around;
+}
+
+#network_3:hover {
+    opacity: 80%;
 }
 
 #about h3 {
@@ -230,3 +283,7 @@ p#numero {
     padding-left: 30px;
 }
 
+#corps h3:hover{
+    border-right: #782221 solid;
+    border-right-width: 5px;
+}
